# sunray

./: .gitignore  requirements.txt
legacy-sunray/sunray/: CMakeLists.txt
legacy-sunray/sunray/doc/design/: sunray interactions.graffle
legacy-sunray/sunray/etc/: sunray.conf
legacy-sunray/sunray/src/: CMakeLists.txt  StringTools.h  SunPacket.cpp  SunPacket.h  config.cmake  configparser.cpp  configparser.h  configsyntax.h  includes.cmake  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  resultspane.h  scenariopane.h  sunraygui.cpp  sunraygui.h  sunrayscenariofile.h  visualizationpane.h  vtk.cmake
legacy-sunray/sunray/src/gfx/: CMakeLists.txt  Ray.h  bbox.cpp  bbox.h  bsphere.cpp  bsphere.h  color.cpp  color.h  edge.cpp  edge.h  edgewatch.h  face.cpp  face.h  kdtree.cpp  kdtree.h  primitives.cpp  primitives.h  sequenced.h  surface.cpp  surface.h  vertex.cpp  vertex.h  wireframe.cpp  wireframe.h
legacy-sunray/sunray/src/http/: CMakeLists.txt  HttpPullData.cpp  HttpPullData.h  post.cpp
legacy-sunray/sunray/src/models/: TestCube.gts  epcot.gts  head.gts
legacy-sunray/sunray/src/scenario/: CMakeLists.txt  actor.cpp  actor.h  flatground.cpp  flatground.h  importedactor.cpp  importedactor.h  obstruction.h  plane.cpp  plane.h  planetest.h  polargridzone.cpp  polargridzone.h  polarground.cpp  polarground.h  polargroundtest.h  reflectiveground.cpp  reflectiveground.h  reflectivegroundtest.h  solarray.h  target.cpp  target.h
legacy-sunray/sunray/src/simulation/: CMakeLists.txt  abstractsimulation.h  eparayradiativetransfermodel.cpp  eparayradiativetransfermodel.h  irradiance.f  parameters.cpp  parameters.h  polydata.txt  radiances.txt  radiativetransfermodel.cpp  radiativetransfermodel.h  scenario.h  scenariocreator.h  simulation.cpp  simulation.h  simulationcontroller.cpp  simulationcontroller.h  simulationresult.h  simulationresultdata.cpp  simulationresultdata.h  solarscenario.cpp  solarscenario.h  solarsimulation.cpp  solarsimulation.h  specrad_input.sample  sunrayradiativetransfermodel.cpp  sunrayradiativetransfermodel.h  suntracker.h  vertexresult.cpp  vertexresult.h
legacy-sunray/sunray/src/simulation/resources/: diffuseparams.txt  directparams.txt  swf_DNA.txt  swf_None.txt  swf_Phytoplankton.txt  swf_PlantGrowth.txt  swf_cataract.txt  swf_erythema.txt  (+3 more)
legacy-sunray/sunray/src/sunrayscenariopane/: conditionsframe.cpp  conditionsframe.h  granularityframe.cpp  granularityframe.h  optionsframe.cpp  optionsframe.h  positionframe.cpp  positionframe.h  sunrayscenariopane.cpp  sunrayscenariopane.h  timeentry.cpp  timeentry.h  timeframe.cpp  timeframe.h
legacy-sunray/sunray/src/visualization/: CMakeLists.txt  hemispheretest.cpp  hemispheretest.h  patch.cpp  patch.h  patchui.cpp  patchui.h  visualization.cpp  visualization.h  vtkwidget.cpp  vtkwidget.h  wireframeviewer.cpp  wireframeviewer.h  wireframeviewercontroller.cpp  wireframeviewercontroller.h
legacy-sunray/sunray/test/cppunit/: CMakeLists.txt  exampletest.h  main.cpp
legacy-sunray/sunray/test/resources/: testParser.conf
(+39 files in other folders)
